kubernetes/policies/kyverno/allow-approved-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allow-approved-registries
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: validate-allowed-image-registries
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - monitoring
                - logging
                - argocd
                - kyverno
                - cert-manager
                - istio-system
      validate:
        message: "A imagem deve vir de um registry aprovado."
        foreach:
          - list: "request.object.spec.containers"
            anyPattern:
              - image: "ghcr.io/gefmoura0601-bot/*"
              - image: "quay.io/*"
              - image: "registry.k8s.io/*"
              - image: "docker.io/*"
              - image: "mcr.microsoft.com/*"
              - image: "registry.istio.io/*"
          - list: "request.object.spec.initContainers || `[]`"
            anyPattern:
              - image: "ghcr.io/gefmoura0601-bot/*"
              - image: "quay.io/*"
              - image: "registry.k8s.io/*"
              - image: "docker.io/*"
              - image: "mcr.microsoft.com/*"
              - image: "registry.istio.io/*"
